apps/public/stonegarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stonegarden
  namespace: stonegarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stonegarden
  template:
    spec:
      containers:
        - name: stonegarden
          image: registry.gitlab.com/vehagn/stonegarden:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 3000
