apps/public/stonegarden/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stonegarden
  namespace: stonegarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stonegarden.dev`)
      kind: Rule
      services:
        - name: stonegarden
          port: 3000
